[gd_scene load_steps=22 format=3 uid="uid://bsdf7ywrjcq5q"]

[ext_resource type="PackedScene" uid="uid://dprh05wn8xinq" path="res://main scenes/interactables/Player.tscn" id="1_8hcsc"]
[ext_resource type="Texture2D" uid="uid://cb1sq5otwgnh4" path="res://Super Mango Platformer Assets by JuhoSprite/Leaf_Tileset.png" id="2_m2t87"]
[ext_resource type="Texture2D" uid="uid://cdirp6pi5blwy" path="res://Super Mango Platformer Assets by JuhoSprite/Cloud_Tileset.png" id="3_h1hsw"]
[ext_resource type="Texture2D" uid="uid://cpf7ar81iih52" path="res://Super Mango Platformer Assets by JuhoSprite/Grass_Tileset.png" id="4_tfniy"]
[ext_resource type="Texture2D" uid="uid://dnne13g6ojbbn" path="res://Super Mango Platformer Assets by JuhoSprite/Grass_Rock_Tileset.png" id="5_v0nq8"]
[ext_resource type="Texture2D" uid="uid://cao0fuwt7w1ko" path="res://Super Mango Platformer Assets by JuhoSprite/Brick_Tileset.png" id="6_v81v0"]
[ext_resource type="Script" uid="uid://cw0026u12moow" path="res://scripts/tutorial_manager.gd" id="7_orii0"]
[ext_resource type="Script" uid="uid://5gcmikkokxyg" path="res://tutorial/tutorial_step.gd" id="8_m8dxa"]
[ext_resource type="Resource" uid="uid://fhwiusnsmdta" path="res://tutorial/step_welcome.tres" id="9_q4jm6"]
[ext_resource type="Resource" uid="uid://bla6d4s62co3s" path="res://tutorial/step_move.tres" id="10_yvtww"]
[ext_resource type="Resource" uid="uid://ctfr82fwtshvv" path="res://tutorial/step_jump.tres" id="11_8vs74"]
[ext_resource type="Resource" uid="uid://c7gyrht72ibes" path="res://tutorial/step_crouch.tres" id="12_5msht"]
[ext_resource type="Resource" uid="uid://d3do7mdgs6kjk" path="res://tutorial/end.tres" id="13_1i70s"]
[ext_resource type="FontFile" uid="uid://byy2lmdvorxki" path="res://fonts/SavageGarden-Block.woff" id="14_3auxl"]
[ext_resource type="Script" uid="uid://27tmjnj2tpuy" path="res://main scenes/menus/button.gd" id="15_m2t87"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dj0dm"]
texture = ExtResource("2_m2t87")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n72e8"]
texture = ExtResource("3_h1hsw")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uaiwq"]
texture = ExtResource("4_tfniy")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2yk4g"]
texture = ExtResource("5_v0nq8")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3b7qx"]
texture = ExtResource("6_v81v0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_snu71"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dj0dm")
sources/1 = SubResource("TileSetAtlasSource_n72e8")
sources/2 = SubResource("TileSetAtlasSource_uaiwq")
sources/3 = SubResource("TileSetAtlasSource_2yk4g")
sources/4 = SubResource("TileSetAtlasSource_3b7qx")

[node name="TutorialScene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(57, -56)
zoom = Vector2(2, 2)

[node name="Player" parent="." instance=ExtResource("1_8hcsc")]
position = Vector2(54, -272)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_snu71")
format = 2
layer_0/tile_data = PackedInt32Array(524251, 4, 1, 589787, 4, 2, 524252, 65540, 1, 589788, 65540, 2, 524253, 65540, 1, 589789, 65540, 2, 524254, 65540, 1, 589790, 65540, 2, 524255, 65540, 1, 589791, 65540, 2, 524256, 65540, 1, 589792, 65540, 2, 524257, 65540, 1, 589793, 65540, 2, 524258, 65540, 1, 589794, 65540, 2, 524259, 65540, 1, 589795, 65540, 2, 524260, 65540, 1, 589796, 65540, 2, 458725, 65540, 1, 524261, 65540, 1, 589797, 65540, 2, 458726, 65540, 1, 524262, 65540, 1, 589798, 65540, 2, 458727, 65540, 1, 524263, 65540, 1, 589799, 65540, 2, 458728, 65540, 1, 524264, 65540, 1, 589800, 65540, 2, 458729, 65540, 1, 524265, 65540, 1, 589801, 65540, 2, 458730, 65540, 1, 524266, 65540, 1, 589802, 65540, 2, 458731, 65540, 1, 524267, 65540, 1, 589803, 65540, 2, 458732, 65540, 1, 524268, 65540, 1, 589804, 65540, 2, 458733, 65540, 1, 524269, 65540, 1, 589805, 65540, 2, 458734, 65540, 1, 524270, 65540, 1, 589806, 65540, 2, 458735, 65540, 1, 524271, 65540, 1, 589807, 65540, 2, 458736, 65540, 1, 524272, 65540, 1, 589808, 65540, 2, 458737, 65540, 1, 524273, 65540, 1, 589809, 65540, 2, 458738, 65540, 1, 524274, 65540, 1, 589810, 65540, 2, 458739, 65540, 1, 524275, 65540, 1, 589811, 65540, 2, 458740, 65540, 1, 524276, 65540, 1, 589812, 65540, 2, 458741, 65540, 1, 524277, 65540, 1, 589813, 65540, 2, 458742, 65540, 1, 524278, 65540, 1, 589814, 65540, 2, 458743, 65540, 1, 524279, 65540, 1, 589815, 65540, 2, 458744, 65540, 1, 524280, 65540, 1, 589816, 65540, 2, 458745, 65540, 1, 524281, 65540, 1, 589817, 65540, 2, 458746, 65540, 1, 524282, 65540, 1, 589818, 65540, 2, 458747, 65540, 1, 524283, 65540, 1, 589819, 65540, 2, 458748, 65540, 1, 524284, 65540, 1, 589820, 65540, 2, 458749, 65540, 1, 524285, 65540, 1, 589821, 65540, 2, 458750, 65540, 1, 524286, 65540, 1, 589822, 65540, 2, 458751, 65540, 1, 524287, 65540, 1, 589823, 65540, 2, 393216, 65540, 1, 458752, 65540, 1, 524288, 65540, 2, 393217, 65540, 1, 458753, 65540, 1, 524289, 65540, 2, 393218, 65540, 1, 458754, 65540, 1, 524290, 65540, 2, 393219, 65540, 1, 458755, 65540, 1, 524291, 65540, 2, 393220, 65540, 1, 458756, 65540, 1, 524292, 65540, 2, 393221, 65540, 1, 458757, 65540, 1, 524293, 65540, 2, 393222, 65540, 1, 458758, 65540, 1, 524294, 65540, 2, 393223, 65540, 1, 458759, 65540, 1, 524295, 65540, 2, 393224, 65540, 1, 458760, 65540, 1, 524296, 65540, 2, 393225, 65540, 1, 458761, 65540, 1, 524297, 65540, 2, 393226, 65540, 1, 458762, 65540, 1, 524298, 65540, 2, 393227, 65540, 1, 458763, 65540, 1, 524299, 65540, 2, 393228, 65540, 1, 458764, 65540, 1, 524300, 65540, 2, 393229, 65540, 1, 458765, 65540, 1, 524301, 65540, 2, 393230, 65540, 1, 458766, 65540, 1, 524302, 65540, 2, 393231, 65540, 1, 458767, 65540, 1, 524303, 65540, 2, 393232, 65540, 1, 458768, 65540, 1, 524304, 65540, 2, 393233, 65540, 1, 458769, 65540, 1, 524305, 65540, 2, 393234, 65540, 1, 458770, 65540, 1, 524306, 65540, 2, 393235, 65540, 1, 458771, 65540, 1, 524307, 65540, 2, 393236, 65540, 1, 458772, 65540, 1, 524308, 65540, 2, 393237, 65540, 1, 458773, 65540, 1, 524309, 65540, 2, 393238, 65540, 1, 458774, 65540, 1, 524310, 65540, 2, 393239, 65540, 1, 458775, 65540, 1, 524311, 65540, 2, 393240, 65540, 1, 458776, 65540, 1, 524312, 65540, 2, 393241, 65540, 1, 458777, 65540, 1, 524313, 65540, 2, 393242, 65540, 1, 458778, 65540, 1, 524314, 65540, 2, 393243, 65540, 1, 458779, 65540, 1, 524315, 65540, 2, 393244, 65540, 1, 458780, 65540, 1, 524316, 65540, 2, 393245, 65540, 1, 458781, 65540, 1, 524317, 65540, 2, 393246, 65540, 1, 458782, 65540, 1, 524318, 65540, 2, 393247, 65540, 1, 458783, 65540, 1, 524319, 65540, 2, 393248, 65540, 1, 458784, 65540, 1, 524320, 65540, 2, 393249, 65540, 1, 458785, 65540, 1, 524321, 65540, 2, 393250, 65540, 1, 458786, 65540, 1, 524322, 65540, 2, 393251, 65540, 1, 458787, 65540, 1, 524323, 65540, 2, 393252, 65540, 1, 458788, 131076, 1, 524324, 131076, 2, 393201, 65540, 1, 327665, 65540, 1, 262129, 65540, 1, 196593, 65540, 1, 131057, 65540, 1, 65521, 65540, 1, -15, 65540, 1, -65551, 131076, 1, -131087, 131076, 1, -196623, 131076, 1, -262159, 131076, 1, -327695, 131076, 1, -393231, 131076, 1, -458767, 131076, 1, -524303, 131076, 1, -589839, 131076, 1, -655375, 131076, 1, -720911, 131076, 1, -786447, 131076, 1, -851983, 131076, 1, -917519, 131076, 1, -983055, 131076, 1, -1048591, 131076, 1, -1114127, 131076, 1, 327701, 65540, 1, 262165, 65540, 1, 196629, 65540, 1, 131093, 65540, 1, 65557, 65540, 1, 21, 65540, 1, -65515, 65540, 1, -131051, 4, 1, -196587, 4, 1, -262123, 4, 1, -327659, 4, 1, -393195, 4, 1, -458731, 4, 1, -524267, 4, 1, -589803, 4, 1, -655339, 4, 1, -720875, 4, 1, -786411, 4, 1, -851947, 4, 1, -917483, 4, 1, -983019, 4, 1, -1048555, 4, 1, -1114091, 4, 1, -1179627, 4, 1, -1114128, 65540, 1, -1114129, 65540, 1, -1048593, 65540, 1, -983057, 65540, 1, -983056, 65540, 1, -1048592, 65540, 1, -917520, 65540, 1, -851984, 65540, 1, -786448, 65540, 1, -720912, 65540, 1, -655376, 65540, 1, -1114130, 65540, 1, -1048594, 65540, 1, -983058, 65540, 1, -917521, 65540, 1, -851985, 65540, 1, -786449, 65540, 1, -720913, 65540, 1, -655377, 65540, 1, -589842, 65540, 1, -524306, 65540, 1, -458770, 65540, 1, -589841, 65540, 1, -524305, 65540, 1, -458769, 65540, 1, -393233, 65540, 1, -327697, 65540, 1, -262161, 65540, 1, -196625, 65540, 1, -131089, 65540, 1, -65554, 65540, 1, -18, 65540, 1, 65518, 65540, 1, -65553, 65540, 1, -17, 65540, 1, 65519, 65540, 1, 131055, 65540, 1, 196591, 65540, 1, 262127, 65540, 1, 327663, 65540, 1, 393199, 65540, 1, -589840, 65540, 1, -524304, 65540, 1, -458768, 65540, 1, -65552, 65540, 1, -16, 65540, 1, 65520, 65540, 1, -393232, 65540, 1, -327696, 65540, 1, -262160, 65540, 1, -196624, 65540, 1, -131088, 65540, 1, 131056, 65540, 1, 196592, 65540, 1, 262128, 65540, 1, 327664, 65540, 1, 393200, 65540, 1, -393234, 65540, 1, -327698, 65540, 1, -262162, 65540, 1, 131054, 65540, 1, 196590, 65540, 1, 262126, 65540, 1, -196626, 65540, 1, -131090, 65540, 1, 327662, 65540, 1, 393198, 65540, 1, -917545, 65540, 1, -852009, 65540, 1, -786473, 65540, 1, -917544, 65540, 1, -852008, 65540, 1, -786472, 65540, 1, -720936, 65540, 1, -655400, 65540, 1, -589864, 65540, 1, -524328, 65540, 1, -458792, 65540, 1, -393257, 65540, 1, -327721, 65540, 1, -262185, 65540, 1, -393256, 65540, 1, -327720, 65540, 1, -262184, 65540, 1, -917543, 65540, 1, -852007, 65540, 1, -786471, 65540, 1, -917542, 65540, 1, -852006, 65540, 1, -786470, 65540, 1, -720934, 65540, 1, -655398, 65540, 1, -589862, 65540, 1, -524326, 65540, 1, -458790, 65540, 1, -393255, 65540, 1, -327719, 65540, 1, -262183, 65540, 1, -393254, 65540, 1, -327718, 65540, 1, -262182, 65540, 1, -917541, 65540, 1, -852005, 65540, 1, -786469, 65540, 1, -917540, 65540, 1, -852004, 65540, 1, -786468, 65540, 1, -720932, 65540, 1, -655396, 65540, 1, -589860, 65540, 1, -524324, 65540, 1, -458788, 65540, 1, -393253, 65540, 1, -327717, 65540, 1, -262181, 65540, 1, -393252, 65540, 1, -327716, 65540, 1, -262180, 65540, 1, -917539, 65540, 1, -852003, 65540, 1, -786467, 65540, 1, -917538, 65540, 1, -852002, 65540, 1, -786466, 65540, 1, -720930, 65540, 1, -655394, 65540, 1, -589858, 65540, 1, -524322, 65540, 1, -458786, 65540, 1, -393251, 65540, 1, -327715, 65540, 1, -262179, 65540, 1, -393250, 65540, 1, -327714, 65540, 1, -262178, 65540, 1, -917537, 65540, 1, -852001, 65540, 1, -786465, 65540, 1, -917536, 65540, 1, -852000, 65540, 1, -786464, 65540, 1, -720928, 65540, 1, -655392, 65540, 1, -589856, 65540, 1, -524320, 65540, 1, -458784, 65540, 1, -393249, 65540, 1, -327713, 65540, 1, -262177, 65540, 1, -393248, 65540, 1, -327712, 65540, 1, -262176, 65540, 1, -917535, 65540, 1, -851999, 65540, 1, -786463, 65540, 1, -917534, 65540, 1, -851998, 65540, 1, -786462, 65540, 1, -720926, 65540, 1, -655390, 65540, 1, -589854, 65540, 1, -524318, 65540, 1, -458782, 65540, 1, -393247, 65540, 1, -327711, 65540, 1, -262175, 65540, 1, -393246, 65540, 1, -327710, 65540, 1, -262174, 65540, 1, -917533, 65540, 1, -851997, 65540, 1, -786461, 65540, 1, -917532, 65540, 1, -851996, 65540, 1, -786460, 65540, 1, -720924, 65540, 1, -655388, 65540, 1, -589852, 65540, 1, -524316, 65540, 1, -458780, 65540, 1, -393245, 65540, 1, -327709, 65540, 1, -262173, 65540, 1, -393244, 65540, 1, -327708, 65540, 1, -262172, 65540, 1, -917531, 65540, 1, -851995, 65540, 1, -786459, 65540, 1, -917530, 65540, 1, -851994, 65540, 1, -786458, 65540, 1, -720922, 65540, 1, -655386, 65540, 1, -589850, 65540, 1, -524314, 65540, 1, -458778, 65540, 1, -393243, 65540, 1, -327707, 65540, 1, -262171, 65540, 1, -393242, 65540, 1, -327706, 65540, 1, -262170, 65540, 1, -917529, 65540, 1, -851993, 65540, 1, -786457, 65540, 1, -917528, 65540, 1, -851992, 65540, 1, -786456, 65540, 1, -720920, 65540, 1, -655384, 65540, 1, -589848, 65540, 1, -524312, 65540, 1, -458776, 65540, 1, -393241, 65540, 1, -327705, 65540, 1, -262169, 65540, 1, -393240, 65540, 1, -327704, 65540, 1, -262168, 65540, 1, -917527, 65540, 1, -851991, 65540, 1, -786455, 65540, 1, -917526, 65540, 1, -851990, 65540, 1, -786454, 65540, 1, -720918, 65540, 1, -655382, 65540, 1, -589846, 65540, 1, -524310, 65540, 1, -458774, 65540, 1, -393239, 65540, 1, -327703, 65540, 1, -262167, 65540, 1, -393238, 65540, 1, -327702, 65540, 1, -262166, 65540, 1, -917525, 65540, 1, -851989, 65540, 1, -786453, 65540, 1, -917524, 65540, 1, -851988, 65540, 1, -786452, 65540, 1, -720916, 65540, 1, -655380, 65540, 1, -589844, 65540, 1, -524308, 65540, 1, -458772, 65540, 1, -393237, 65540, 1, -327701, 65540, 1, -262165, 65540, 1, -393236, 65540, 1, -327700, 65540, 1, -262164, 65540, 1, -917523, 65540, 1, -851987, 65540, 1, -786451, 65540, 1, -917522, 65540, 1, -851986, 65540, 1, -786450, 65540, 1, -720914, 65540, 1, -655378, 65540, 1, -393235, 65540, 1, -327699, 65540, 1, -262163, 65540, 1, -1179626, 65540, 1, -1114090, 65540, 1, -1048554, 65540, 1, -983018, 65540, 1, -917482, 65540, 1, -851946, 65540, 1, -786410, 65540, 1, -720874, 65540, 1, -655338, 65540, 1, -589802, 65540, 1, -524266, 65540, 1, -458730, 65540, 1, -393194, 65540, 1, -327658, 65540, 1, -262122, 65540, 1, -196586, 65540, 1, -131050, 65540, 1, -65514, 65540, 1, 22, 65540, 1, 65558, 65540, 1, 131094, 65540, 1, 196630, 65540, 1, 262166, 65540, 1, 327702, 65540, 1, -1179625, 65540, 1, -1114089, 65540, 1, -1048553, 65540, 1, -1179624, 65540, 1, -1114088, 65540, 1, -1048552, 65540, 1, -983016, 65540, 1, -917480, 65540, 1, -851944, 65540, 1, -786408, 65540, 1, -720872, 65540, 1, -655337, 65540, 1, -589801, 65540, 1, -524265, 65540, 1, -655336, 65540, 1, -589800, 65540, 1, -524264, 65540, 1, -458728, 65540, 1, -393192, 65540, 1, -327656, 65540, 1, -262120, 65540, 1, -196584, 65540, 1, -131049, 65540, 1, -65513, 65540, 1, 23, 65540, 1, -131048, 65540, 1, -65512, 65540, 1, 24, 65540, 1, 65560, 65540, 1, 131096, 65540, 1, 196632, 65540, 1, 262168, 65540, 1, 327704, 65540, 1, -1179623, 65540, 1, -1114087, 65540, 1, -1048551, 65540, 1, -1179622, 65540, 1, -1114086, 65540, 1, -1048550, 65540, 1, -983014, 65540, 1, -917478, 65540, 1, -851942, 65540, 1, -786406, 65540, 1, -720870, 65540, 1, -655335, 65540, 1, -589799, 65540, 1, -524263, 65540, 1, -655334, 65540, 1, -589798, 65540, 1, -524262, 65540, 1, -458726, 65540, 1, -393190, 65540, 1, -327654, 65540, 1, -262118, 65540, 1, -196582, 65540, 1, -131047, 65540, 1, -65511, 65540, 1, 25, 65540, 1, -131046, 65540, 1, -65510, 65540, 1, 26, 65540, 1, 65562, 65540, 1, 131098, 65540, 1, 196634, 65540, 1, 262170, 65540, 1, 327706, 65540, 1, -1179621, 65540, 1, -1114085, 65540, 1, -1048549, 65540, 1, -1179620, 65540, 1, -1114084, 65540, 1, -1048548, 65540, 1, -983012, 65540, 1, -917476, 65540, 1, -851940, 65540, 1, -786404, 65540, 1, -720868, 65540, 1, -655333, 65540, 1, -589797, 65540, 1, -524261, 65540, 1, -655332, 65540, 1, -589796, 65540, 1, -524260, 65540, 1, -458724, 65540, 1, -393188, 65540, 1, -327652, 65540, 1, -262116, 65540, 1, -196580, 65540, 1, -131045, 65540, 1, -65509, 65540, 1, 27, 65540, 1, -131044, 65540, 1, -65508, 65540, 1, 28, 65540, 1, 65564, 65540, 1, 131100, 65540, 1, 196636, 65540, 1, 262172, 65540, 1, 327708, 65540, 1, -1179619, 65540, 1, -1114083, 65540, 1, -1048547, 65540, 1, -1179618, 65540, 1, -1114082, 65540, 1, -1048546, 65540, 1, -983010, 65540, 1, -917474, 65540, 1, -851938, 65540, 1, -786402, 65540, 1, -720866, 65540, 1, -655331, 65540, 1, -589795, 65540, 1, -524259, 65540, 1, -655330, 65540, 1, -589794, 65540, 1, -524258, 65540, 1, -458722, 65540, 1, -393186, 65540, 1, -327650, 65540, 1, -262114, 65540, 1, -196578, 65540, 1, -131043, 65540, 1, -65507, 65540, 1, 29, 65540, 1, -131042, 65540, 1, -65506, 65540, 1, 30, 65540, 1, 65566, 65540, 1, 131102, 65540, 1, 196638, 65540, 1, 262174, 65540, 1, 327710, 65540, 1, -1179617, 65540, 1, -1114081, 65540, 1, -1048545, 65540, 1, -1179616, 65540, 1, -1114080, 65540, 1, -1048544, 65540, 1, -983008, 65540, 1, -917472, 65540, 1, -851936, 65540, 1, -786400, 65540, 1, -720864, 65540, 1, -655329, 65540, 1, -589793, 65540, 1, -524257, 65540, 1, -655328, 65540, 1, -589792, 65540, 1, -524256, 65540, 1, -458720, 65540, 1, -393184, 65540, 1, -327648, 65540, 1, -262112, 65540, 1, -196576, 65540, 1, -131041, 65540, 1, -65505, 65540, 1, 31, 65540, 1, -131040, 65540, 1, -65504, 65540, 1, 32, 65540, 1, 65568, 65540, 1, 131104, 65540, 1, 196640, 65540, 1, 262176, 65540, 1, 327712, 65540, 1, -1179615, 65540, 1, -1114079, 65540, 1, -1048543, 65540, 1, -1179614, 65540, 1, -1114078, 65540, 1, -1048542, 65540, 1, -983006, 65540, 1, -917470, 65540, 1, -851934, 65540, 1, -786398, 65540, 1, -720862, 65540, 1, -655327, 65540, 1, -589791, 65540, 1, -524255, 65540, 1, -655326, 65540, 1, -589790, 65540, 1, -524254, 65540, 1, -458718, 65540, 1, -393182, 65540, 1, -327646, 65540, 1, -262110, 65540, 1, -196574, 65540, 1, -131039, 65540, 1, -65503, 65540, 1, 33, 65540, 1, -131038, 65540, 1, -65502, 65540, 1, 34, 65540, 1, 65570, 65540, 1, 131106, 65540, 1, 196642, 65540, 1, 262178, 65540, 1, 327714, 65540, 1, -1179613, 65540, 1, -1114077, 65540, 1, -1048541, 65540, 1, -1179612, 65540, 1, -1114076, 65540, 1, -1048540, 65540, 1, -983004, 65540, 1, -917468, 65540, 1, -851932, 65540, 1, -786396, 65540, 1, -720860, 65540, 1, -655325, 65540, 1, -589789, 65540, 1, -524253, 65540, 1, -655324, 65540, 1, -589788, 65540, 1, -524252, 65540, 1, -458716, 65540, 1, -393180, 65540, 1, -327644, 65540, 1, -262108, 65540, 1, -196572, 65540, 1, -131037, 65540, 1, -65501, 65540, 1, 35, 65540, 1, -131036, 65540, 1, -65500, 65540, 1, 36, 65540, 1, 65572, 65540, 1, 131108, 65540, 1, 196644, 65540, 1, 262180, 65540, 1, 327716, 65540, 1, 327666, 65540, 1, 327667, 65540, 1, 327668, 65540, 1, 327669, 65540, 1, 327670, 65540, 1, 327671, 65540, 1, 327672, 65540, 1, 327673, 65540, 1, 327674, 65540, 1, 327675, 65540, 1, 327676, 65540, 1, 327677, 65540, 1, 327678, 65540, 1, 327679, 65540, 1, 262144, 65540, 1, 262145, 65540, 1, 262146, 65540, 1, 262147, 65540, 1, 262148, 65540, 1, 262149, 65540, 1, 262150, 65540, 1, 262151, 65540, 1, 262152, 65540, 1, 262153, 65540, 1, 262154, 65540, 1, 262155, 65540, 1, 262156, 65540, 1, 262157, 65540, 1, 262158, 65540, 1, 262159, 65540, 1, 262160, 65540, 1, 262161, 65540, 1, 262162, 65540, 1, 262163, 65540, 1, 262164, 65540, 1, 196628, 65540, 1, 196627, 65540, 1, 196626, 65540, 1, 196625, 65540, 1, 196624, 65540, 1, 196623, 65540, 1, 196622, 65540, 1, 196621, 65540, 1, 196620, 65540, 1, 196619, 65540, 1, 196618, 65540, 1, 196617, 65540, 1, 196616, 65540, 1, 196615, 65540, 1, 196614, 65540, 1, 196613, 65540, 1, 196612, 65540, 1, 196611, 65540, 1, 196610, 65540, 1, 196609, 65540, 1, 196608, 65540, 1, 262143, 65540, 1, 262142, 65540, 1, 262141, 65540, 1, 262140, 65540, 1, 262139, 65540, 1, 262138, 65540, 1, 262137, 65540, 1, 262136, 65540, 1, 262135, 65540, 1, 262134, 65540, 1, 262133, 65540, 1, 262132, 65540, 1, 262131, 65540, 1, 262130, 65540, 1, 393204, 65540, 1, 393205, 65540, 1, 393206, 65540, 1, 393207, 65540, 1, 393203, 65540, 1, 393202, 65540, 1, 393197, 65540, 1, 393208, 65540, 1, 393209, 65540, 1, 393210, 65540, 1, 393211, 65540, 1, 393212, 65540, 1, 393213, 65540, 1, 393214, 65540, 1, 393215, 65540, 1, 327680, 65540, 1, 327681, 65540, 1, 327682, 65540, 1, 327683, 65540, 1, 327684, 65540, 1, 327685, 65540, 1, 327686, 65540, 1, 262167, 65540, 1, 262169, 65540, 1, 327700, 65540, 1, 327699, 65540, 1, 327698, 65540, 1, 327697, 65540, 1, 327696, 65540, 1, 327695, 65540, 1, 327694, 65540, 1, 327693, 65540, 1, 327692, 65540, 1, 327691, 65540, 1, 327690, 65540, 1, 327689, 65540, 1, 327688, 65540, 1, 327687, 65540, 1, 196594, 65540, 1, 131058, 65540, 1, 65522, 65540, 1, -14, 65540, 0, -13, 65540, 0, 65523, 65540, 1, -12, 65540, 0, 65524, 65540, 1, -11, 65540, 0, 65525, 65540, 1, -10, 65540, 0, 65526, 65540, 1, -9, 65540, 0, 65527, 65540, 1, -8, 65540, 0, 65528, 65540, 1, -7, 65540, 0, 65529, 65540, 1, -6, 65540, 0, 65530, 65540, 1, -5, 65540, 0, 65531, 65540, 1, -4, 65540, 0, 65532, 65540, 1, -3, 65540, 0, 65533, 65540, 1, -2, 65540, 0, 65534, 65540, 1, -1, 65540, 0, 65535, 65540, 1, -65536, 65540, 0, 0, 65540, 1, -65535, 65540, 0, 1, 65540, 1, -65534, 65540, 0, 2, 65540, 1, -65533, 65540, 0, 3, 65540, 1, -65532, 65540, 0, 4, 65540, 1, -65531, 65540, 0, 5, 65540, 1, -65530, 65540, 0, 6, 65540, 1, -65529, 65540, 0, 7, 65540, 1, -65528, 65540, 0, 8, 65540, 1, -65527, 65540, 0, 9, 65540, 1, -65526, 65540, 0, 10, 65540, 1, -65525, 65540, 0, 11, 65540, 1, -65524, 65540, 0, 12, 65540, 1, -65523, 65540, 0, 13, 65540, 1, -65522, 65540, 0, 14, 65540, 1, -65521, 65540, 0, 15, 65540, 1, -65520, 65540, 0, 16, 65540, 1, -65519, 65540, 0, 17, 65540, 1, -65518, 65540, 0, 18, 65540, 1, -65517, 65540, 0, 19, 65540, 1, -65516, 65540, 0, 20, 65540, 1, 65556, 65540, 1, 131092, 65540, 1, 131091, 65540, 1, 65555, 65540, 1, 65554, 65540, 1, 131090, 65540, 1, 131089, 65540, 1, 65553, 65540, 1, 131088, 65540, 1, 65552, 65540, 1, 65551, 65540, 1, 65550, 65540, 1, 131086, 65540, 1, 131087, 65540, 1, 65549, 65540, 1, 131084, 65540, 1, 131083, 65540, 1, 65548, 65540, 1, 65547, 65540, 1, 65546, 65540, 1, 131082, 65540, 1, 131085, 65540, 1, 196606, 65540, 1, 196607, 65540, 1, 131072, 65540, 1, 131073, 65540, 1, 131074, 65540, 1, 131075, 65540, 1, 131076, 65540, 1, 65541, 65540, 1, 65542, 65540, 1, 65543, 65540, 1, 65544, 65540, 1, 65545, 65540, 1, 131067, 65540, 1, 131068, 65540, 1, 131069, 65540, 1, 131070, 65540, 1, 131071, 65540, 1, 65536, 65540, 1, 65537, 65540, 1, 65538, 65540, 1, 65539, 65540, 1, 65540, 65540, 1, 131079, 65540, 1, 131078, 65540, 1, 131077, 65540, 1, 131080, 65540, 1, 131081, 65540, 1, 196605, 65540, 1, 196604, 65540, 1, 196603, 65540, 1, 196602, 65540, 1, 196601, 65540, 1, 196600, 65540, 1, 196599, 65540, 1, 196596, 65540, 1, 196597, 65540, 1, 196598, 65540, 1, 131066, 65540, 1, 131065, 65540, 1, 131064, 65540, 1, 131063, 65540, 1, 131062, 65540, 1, 131061, 65540, 1, 131060, 65540, 1, 131059, 65540, 1, 196595, 65540, 1)

[node name="TutorialManager" type="Node" parent="."]
script = ExtResource("7_orii0")
steps = Array[ExtResource("8_m8dxa")]([ExtResource("9_q4jm6"), ExtResource("10_yvtww"), ExtResource("11_8vs74"), ExtResource("12_5msht"), ExtResource("13_1i70s")])

[node name="AudioPlayer" type="AudioStreamPlayer" parent="TutorialManager"]

[node name="SubtitleLabel" type="Label" parent="TutorialManager"]
offset_left = -223.0
offset_top = -9.0
offset_right = 335.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("14_3auxl")
theme_override_font_sizes/font_size = 24
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
offset_left = -27.0
offset_top = -217.0
offset_right = 142.0
offset_bottom = -167.0
theme_override_fonts/font = ExtResource("14_3auxl")
theme_override_font_sizes/font_size = 32
text = "Back To Menu"
script = ExtResource("15_m2t87")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
